# boson-dev

./: .dockerignore  .env.example  .gitignore  .npmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATUS.md  boson.yml  build.rs  docker-compose.yml  install.sh  justfile  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
apps/server/: Dockerfile  package.json  tsconfig.json  tsup.config.ts
apps/server/migrations/: 001_canonical.sql  002_auth_overrides.sql
apps/server/src/: app.ts  config.ts  index.ts
apps/server/src/db/: migrate.ts
apps/server/src/lib/: canonical.ts  draft-repo.ts  jwt.ts  merge-workspace.ts  override-repo.ts  password.ts  postgres.ts  proxy.ts  redis.ts  user-request-repo.ts  users-repo.ts
apps/server/src/middleware/: require-auth.ts
apps/server/src/routes/: auth-public.ts  canonical.ts  health.ts  proxy.ts  secured-v1.ts
apps/web/: Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/nginx/: default.conf
apps/web/src/: index.css  main.tsx
apps/web/src/components/: app-shell.tsx  top-bar.tsx
apps/web/src/components/api-client/: apply-canonical.ts  body-editor.tsx  (+18 more)
apps/web/src/context/: auth-context.tsx  workspace-context.tsx
apps/web/src/lib/: api.ts  auth-token.ts  environments.ts  http.ts  kv.ts  monaco.ts  relative-time.ts  request-preferences.ts  router.ts  workspace-api.ts  workspace.ts
apps/web/src/pages/: login-page.tsx
cli/: Cargo.toml  README.md
cli/src/: main.rs  schema.rs
cli/src/commands/: credentials.rs  dev.rs  init.rs  login.rs  mod.rs  push.rs  register.rs
docs/: release-verify-checklist.md  sync-and-overrides.md
example/: .gitignore  README.md  boson.yml
example/boson/: environments.yml  requests.yml
example/server/: package.json  pnpm-lock.yaml
example/server/src/: server.js
src/: assets.rs  cli.rs  config.rs  db.rs  lib.rs  main.rs  project.rs  proxy.rs  runner.rs  secrets.rs  server.rs  watcher.rs
src/cli/: args.rs  doctor.rs  init.rs  lint.rs  mod.rs  run.rs  serve.rs  update.rs
src/config/: auth.rs  body.rs  mod.rs
src/db/: migrations.rs  mod.rs  rows.rs  store.rs  types.rs
src/runner/: http.rs  mod.rs  orchestrator.rs  registry.rs  resolve.rs
src/server/: error.rs  mod.rs  shutdown.rs  state.rs  vite.rs
src/server/routes/: fallback.rs  history.rs  meta.rs  mod.rs  project.rs  runs.rs  secrets.rs
tests/: project.rs  project_and_runner.rs  runner.rs  secrets.rs
tests/common/: mod.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/: boot-states.tsx  brand-logo.tsx  env-chip.tsx  kv-editor.tsx  method-badge.tsx  request-bar.tsx  request-editor.tsx  resolved-text.tsx  response-pane.tsx  response-panel.tsx  stale-draft-banner.tsx  status-pill.tsx  variable-input.tsx  workspace-header.tsx  workspace-topbar.tsx
web/src/components/request-pane/: auth-tab.tsx  body-tab.tsx  headers-tab.tsx  index.tsx  options-tab.tsx  params-tab.tsx
web/src/components/sidebar/: app-sidebar.tsx  request-folder-group.tsx  request-menu-item.tsx  sidebar-brand.tsx  theme-toggle-button.tsx  utils.ts  workspace-switcher.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  code-editor.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx  tabs.tsx  textarea.tsx  vercel-tabs.tsx
web/src/hooks/: use-current-request.ts  use-keyboard-shortcuts.ts  use-project.ts  use-request-actions.ts  use-variables.ts
web/src/lib/: api.ts  format.ts  request-form.ts  variables.ts
(+23 files in other folders)
