[package]
name = "boson"
version = "0.1.0"
edition = "2021"
description = "Boson CLI with an embedded Vite + React UI"
license = "MIT"

[[bin]]
name = "boson"
path = "src/main.rs"

[features]
# Embed the built Vite app into the binary. Disable for fast Rust-only
# iteration: `cargo build --no-default-features` skips `pnpm build` in build.rs.
default = ["embed-ui"]
embed-ui = ["dep:rust-embed"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
mime_guess = "2.0.5"
open = "5.3.4"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "stream"] }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"], optional = true }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.10", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[build-dependencies]
anyhow = "1.0.102"
