[package]
name = "boson"
version = "0.1.6"
edition = "2021"
description = "Boson CLI with an embedded Vite + React UI"
license = "MIT"

[[bin]]
name = "boson"
path = "src/main.rs"

[features]
# Embed the built Vite app into the binary. Disable for fast Rust-only
# iteration: `cargo build --no-default-features` skips `pnpm build` in build.rs.
default = ["embed-ui"]
embed-ui = ["dep:rust-embed"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
futures-util = "0.3.32"
glob = "0.3.3"
globset = "0.4.18"
mime_guess = "2.0.5"
notify = { version = "8.2.0", features = ["serde"] }
open = "5.3.4"
reqwest = { version = "0.13.3", default-features = false, features = ["cookies", "form", "json", "multipart", "query", "rustls", "stream"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"], optional = true }
self_update = { version = "0.44.0", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "ureq"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.10", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[build-dependencies]
anyhow = "1.0.102"

[dev-dependencies]
base64 = "0.22.1"
httpmock = "0.8.3"
regex = "1.12.3"
tempfile = "3.27.0"
