[package]
name = "boson"
version = "0.1.0"
edition = "2021"
description = "Boson CLI (Rust) — separate from the pnpm workspace"

[[bin]]
name = "boson"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
anyhow = "1"
thiserror = "2"
